--- a/Lab3/2nd task/index.html
+++ b/Lab3/2nd task/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        ToDo List
+    </header>
     <div class="container">
         <div class="todo-app">
-            <h2>To-Do List <img src="images/icon.png"></h2>
+            <h2>ToDo List </h2>
             <div class="row">
-                <input type="text" id= "input-box" placeholder="Add your text" onkeydown="if(event.keyCode===13) addTask()">
+                <input type="text" id= "input-box" placeholder="New Task" onkeydown="if(event.keyCode===13) addTask()">
                 <button onclick= "addTask()">Add</button>
             </div>
             <ul id = "list-container">
