--- a/Lab2/Microsoft/Miscrosoft.html
+++ b/Lab2/Microsoft/Miscrosoft.html
@@ -4,10 +4,14 @@
     <title>Microsoft</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
-<button>Microsoft</button>
-</div>
-
+<div>
+<button><img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Microsoft_logo.svg/1024px-Microsoft_logo.svg.png" >Microsoft</button>
+<ul>
+    <li class = "menu-item">Microsoft 365</li>
+    <li class = "menu-item">Office</li>
+    <li class = "menu-item">Windows</li>
+    <li class = "menu-item">Поддержка</li>
+</ul>
 </div>
 <div class="galery">
 <div class="card">
