--- a/Lab2/Facebook/facebook.html
+++ b/Lab2/Facebook/facebook.html
@@ -10,23 +10,23 @@
         <div class="main-container">
             <div class="text-container">
                 <h1>facebook</h1>
-                <p>Facebook helps you connect and share with the people in your life.</p>
+                <p>Facebook помогает вам всегда оставаться на связи и общаться со своими знакомыми.</p>
             </div>
             <div class="form-container">
                 <form action="#" method="post">
                     <div class="form-input">
-                        <input type="text" id="email" name="email" placeholder="Email address or phone number">
+                        <input type="text" id="email" name="email" placeholder="Электронный адрес или номер телефона">
                     </div>
                     <div class="form-input">
-                        <input type="password" id="password" name="password" placeholder="Password">
+                        <input type="password" id="password" name="password" placeholder="Пароль">
                     </div>
-                    <button type="submit" id="login"><strong>Log in</strong></button>
+                    <button type="submit" id="login"><strong>Вход</strong></button>
                     <div class="forgot-link">
-                        <a href="#">Forgotten password?</a>
+                        <a href="#">Забыли пароль?</a>
                     </div>
                     <hr id="border">
-                    <button type="submit" class="create-account"><strong>Create new account</strong></button>
-                    <p class="page-create-text"><strong>Create a Page</strong> for a celebrity, brand or business.</p>
+                    <button type="submit" class="create-account"><strong>Создать аккаунт</strong></button>
+                    <p class="page-create-text"><strong>Создать страницу</strong> знаменитости, музыкальной группы или компании.</p>
                 </form>
             </div>
         </div>
